RESOLVED FIXED13804
REGRESSION (r21611): Several new layout test pixel failures (misspelling markers)
https://bugs.webkit.org/show_bug.cgi?id=13804
Summary REGRESSION (r21611): Several new layout test pixel failures (misspelling mark...
Justin Garcia
Reported 2007-05-21 17:44:21 PDT
See: http://build.webkit.org/results/post-commit-pixel-powerpc-mac-os-x/4098/results.html editing/deleting/delete-to-select-table editing/selection/4983858 editing/selection/replaced-boundaries-1 Are showing incorrect misspelling markers.
Attachments
fix off by one error (53.54 KB, patch)
2007-05-22 18:33 PDT, Darin Adler
justin.garcia: review+
Darin Adler
Comment 1 2007-05-21 17:45:10 PDT
Uh oh. I'll take a look.
Darin Adler
Comment 2 2007-05-22 18:33:31 PDT
Created attachment 14672 [details] fix off by one error
Justin Garcia
Comment 3 2007-05-22 18:42:15 PDT
Comment on attachment 14672 [details] fix off by one error r=me, I'll check it in.
Justin Garcia
Comment 4 2007-05-22 18:44:14 PDT
r21654. BTW it was lame of me to work on this without assigning it to myself.
Darin Adler
Comment 5 2007-05-22 19:11:22 PDT
Justin's fix was better than mine, so it's good he landed his!
Note You need to log in before you can comment on or make changes to this bug.