LayoutTests:

Reviewed by darin

        http://bugs.webkit.org/show_bug.cgi?id=13804
        REGRESSION(r21611): Several new layout test pixel failures (misspelling markers)

        * editing/selection/13804-expected.checksum: Added.
        * editing/selection/13804-expected.png: Added.
        * editing/selection/13804-expected.txt: Added.
        * editing/selection/13804.html: Added.
        These were missing:
        * editing/selection/5076323-1-expected.png: Added.
        * editing/selection/5076323-2-expected.png: Added.
        * editing/selection/5076323-3-expected.png: Added.

WebCore:

        Reviewed by darin, who found the fix independently.

        http://bugs.webkit.org/show_bug.cgi?id=13804
        REGRESSION(r21611): Several new layout test pixel failures (misspelling markers)

        r21611 exposed a bug in the way removeMarkers computes
        the end of the range to remove markers from.  It also
        introduced a bug: removeMarkers expects a startOffset
        and a length, not a startOffset and an endOffset (added
        a layout test).

        * dom/Document.cpp:
        (WebCore::Document::removeMarkers): The other removeMarkers
        expects a startOffset and a length, not a startOffset and
        an endOffset.
        (WebCore::Document::removeMarkers): Fixed the endOffset
        from length and startOffset calculation.



Canonical link: https://commits.webkit.org/18077@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21654 268f45cc-cd09-0410-ab3c-d52691b4dbfc